# event-ease

./: .env  .env.template  .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  pre-commit-config.yaml  pyproject.toml  run.py
apps/: __init__.py
apps/calendars/: apps.py  forms.py  recurrences.py  urls.py  views.py
apps/calendars/migrations/: 0001_initial.py
apps/calendars/templatetags/: event_color.py  event_colors.py
apps/recurrence/: forms.py
apps/static/c-recurrence/js/: recurrence-widget.js
apps/static/calendars/css/: list.css
apps/static/calendars/js/: tom_select_options_color.js
apps/static/css/: htmx_indicator.css
apps/static/js/: colors.js
apps/static/tom-select/css/: tom-select.min.css
apps/static/tom-select/js/: tom-select.complete.min.js
apps/templates/: base.html
apps/templates/calendars/: create_edit.html  list.html  pagination.html
apps/templates/calendars/htmx/: create_edit_form.html
apps/templates/partials/: head.html
config/: asgi.py  settings.py  urls.py  wsgi.py
