[project]
name = "calendar-event-ease"
version = "0.1.0"
description = "Simpler interface to manage your google calendar events"
authors = [
    { name = "mathiasag7", email = "mathiasag07@gmail.com" }
]
dependencies = [
    "django",
    "gcsa>=2.1.0",
    "django-crispy-forms>=2.1",
    "crispy-bootstrap5>=0.7",
    "django-htmx>=1.17.0",
    "django-recurrence>=1.11.1",
    "django-render-block>=0.9.2",
    "gunicorn>=21.2.0",
]

readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
event-ease = 'run:main'
ev-local = 'manage:main'


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black",
    "autoflake>=2.2.1",
    "djlint",
    "reorder-python-imports",
    "django-browser-reload>=1.11.0",
    "django-extensions>=3.2.3",
    "ruff",
    "mypy>=1.6.1",
    "pre-commit>=3.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true
